syntax = "proto3";

package proto;

option go_package = "github.com/israelmiranda/go-expert/grpc/greet/proto";

//
message GreetRequest {
  string first_name = 1;
}

//
message GreetResponse {
  string result = 1;
}

//
service GreetService {
  //
  rpc Greet(GreetRequest) returns (GreetResponse);
  //
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
  //
  rpc LongGreet(stream GreetRequest) returns (GreetResponse);
};